# code-snippets

./: .gitmodules  README.md
bash/: argument-parsing.sh
c++-code-structure/: CMakeLists.txt
c++-code-structure/src/: main.cpp
c++-code-structure/src/componenta/: CMakeLists.txt
c++-registration-member-func/include/registration/: registration.h
clang-tooling/: README.md  build.sh  test.cpp
concurrency-stlab/: CMakeLists.txt
concurrency-stlab/src/channel_test/: CMakeLists.txt
docker-with-ssh-for-clion/: Dockerfile  README  build.sh
gcc-build-test/: build-gcc.sh
gnuplot/: create.sh  graph.gnuplot
install-compiler/: install-gcc.sh
png-writing/: CMakeLists.txt
png-writing/src/: main.cpp
rust-async/: Cargo.toml
rust-async/src/: main.rs
rust-auto-cbinding/bor-sys/: Cargo.toml  build.rs
rust-cbindings/: Cargo.toml
rust-cbindings/bor-sys/: Cargo.toml
rust-cbindings/src/: lib.rs
rust-error-wrapping/: Cargo.toml
rust-error-wrapping/src/: main.rs
rust-lifetime-closurecapture/: Cargo.toml
rust-lifetime-closurecapture/src/: main.rs
rust-manual-cbinding/: Cargo.toml  build.rs
rust-manual-cbinding/borc/: CMakeLists.txt
rust-manual-cbinding/src/: lib.rs
rust-serde-serialization/: Cargo.toml
rust-serde-serialization/src/: main.rs
rust-thread/: Cargo.toml
rust-thread/src/: main.rs
rust-winit-webgpu/: Cargo.toml
rust-winit-webgpu/src/: main.rs  shader.vert
sdl2-framebuffertest/: CMakeLists.txt
sdl2-framebuffertest/src/: sdl2-framebuffertest.cpp
understanding-compilation-linking/: compile.sh  simple.c
(+9 files in other folders)
