[package]
name = "rust-serde-serialization"
version = "0.1.0"
authors = ["Bjorn Martens <bjorn@expeditious.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.106", features = ["derive"] }
serde_cbor = "0.11.1"
serde_json = "1.0.51"
byteorder = "1.3.4"
