[package]
name = "rust-winit-webgpu"
version = "0.1.0"
authors = ["Bjorn Martens <bjorn@expeditious.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.22.1"
wgpu = "0.5.0"
futures = "0.3.4"
glsl-to-spirv = "0.1.7"
bytemuck = "1.2.0"
image = "0.23.4"
cgmath = "0.17.0"
