[package]
name = "bor-sys"
version = "0.1.0"
authors = ["Bjorn Martens <bjorn@expeditious.nl>"]
edition = "2018"
build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cmake = "0.1.42"
bindgen = "0.52"
